legacy/1.0/kubernetes/applications/scanservjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanservjs
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scanservjs
  template:
    metadata:
      labels:
        app: scanservjs
    spec:
      containers:
        - name: scanservjs
          image: sbs20/scanservjs:v3.0.3
          securityContext:
            privileged: false
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 256Mi
            limits:
              cpu: 500m
              ephemeral-storage: 2Gi
              memory: 1Gi
          ports:
            - containerPort: 8080
