legacy/1.0/kubernetes/applications/scanservjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanservjs
  namespace: apps
  labels:
    app: scanservjs
spec:
  selector:
    app: scanservjs
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
